--- a/globsettings.cfg
+++ b/globsettings.cfg
@@ -3,6 +3,7 @@ host=ip_or_domain_here
 port=3306
 user=yourusername
 passwd=yourpassword
+database=curatedcrawldb
 
 [scraper_discovery]
 ; How much to get away from initial link during discovery mode. 5 works best according to tests I made
