Prep for modtool multiprocessing

--- a/globsettings.cfg
+++ b/globsettings.cfg
@@ -16,3 +16,10 @@ links_per_site=10
 [scraper_scraping]
 ; Max number of pages to extract data from (per site)
 max_pages=300
+
+[modtool]
+; Rendered image size
+render_x = 1000
+render_y = 700
+; Number of browsers to open for rendering
+threads = 8
