Crawler: Created a 'tags to crawl' variable

--- a/globsettings.cfg
+++ b/globsettings.cfg
@@ -12,6 +12,8 @@ depth=5
 ; big web blogs and sites with thousands of links during domain discovery and this can result in a waste
 ; of resources and time. This variable exists for that reason.
 links_per_site=10
+; Tags to crawl WITHOUT SPACES BETWEEN COMMAS
+tags = RETRO,UNIQ,MBLOG
 
 [scraper_scraping]
 ; Max number of pages to extract data from (per site)
