added timeout functionality to modtool

--- a/globsettings.cfg
+++ b/globsettings.cfg
@@ -20,6 +20,7 @@ tags = RETRO,UNIQ,MBLOG
 max_pages=300
 
 [modtool]
+page_load_timeout = 10
 ; Rendered image size
 render_x = 1000
 render_y = 700
